compiler/tools/fpp-check/test/spec_loc/component_path_error.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/spec_loc/component_path_error.fpp:1.23
locate component C at "incorrect.fpp"
                      ^
error: incorrect location path [ local path prefix ]/compiler/tools/fpp-check/test/spec_loc/incorrect.fpp
actual location is [ local path prefix ]/compiler/tools/fpp-check/test/spec_loc/component_path_error.fpp:2.1
passive component C {
^
